# ssh-vaultwarden

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/store/: file.rs  keyring.rs  mod.rs
src/vault/: mock.rs  mod.rs  real.rs
tests/: cli_tests.rs
