[package]
name = "ssh-vaultvarden"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssh_vaultvarden"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"
inquire = "0.7"
atty = "0.2"
arboard = "3.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1.10"
uuid = { version = "1.10", features = ["v4"] }
pbkdf2 = "0.12"
sha2 = "0.10"
base64 = "0.21"
log = "0.4"
env_logger = "0.11"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
hmac = "0.12"
hkdf = "0.12"
rsa = { version = "0.9", features = ["sha1", "sha2"] }
pkcs8 = "0.10"
sha1 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"