[package]
name = "ssh-vaultvarden"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sensiarion/ssh-vaultwarden"

[lib]
name = "ssh_vaultvarden"
path = "src/lib.rs"

[[bin]]
name = "sv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"
inquire = "0.7"
atty = "0.2"
arboard = "3.3"
# Use rustls to avoid OpenSSL (important for cross-compiling in CI).
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls-webpki-roots"] }
regex = "1.10"
uuid = { version = "1.10", features = ["v4"] }
pbkdf2 = "0.12"
sha2 = "0.10"
base64 = "0.21"
log = "0.4"
env_logger = "0.11"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
hmac = "0.12"
hkdf = "0.12"
rsa = { version = "0.9", features = ["sha1", "sha2"] }
pkcs8 = "0.10"
sha1 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["linux-native-sync-persistent", "crypto-rust"] }

[features]
# Debug-only features. Not enabled by default.
debug = []

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
